--- a/build.gradle
+++ b/build.gradle
@@ -3,8 +3,19 @@ buildscript {
         // These repositories are only for Gradle plugins, put any other repositories in the repository block further below
         maven { url = 'https://maven.minecraftforge.net' }
         mavenCentral()
-        maven { url = 'https://maven.parchmentmc.org' }
+        maven {
+            name = 'ParchmentMC'
+            url = 'https://maven.parchmentmc.org'
+        }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
+        maven { url = 'https://maven.architectury.dev/' }
+        maven {
+            // saps.dev Maven (KubeJS and Rhino)
+            url = "https://maven.saps.dev/releases"
+            content {
+                includeGroup "dev.latvian.mods"
+            }
+        }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: "${forgegradle_version}", changing: true
@@ -173,6 +184,13 @@ dependencies {
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
+    // ForgeGradle
+//    implementation fg.deobf("dev.latvian.mods:kubejs-forge:${kubejs_version}")
+
+    // these two are unfortunately needed since fg.deobf doesn't respect transitive dependencies yet
+//    implementation fg.deobf("dev.latvian.mods:rhino-forge:${rhino_version}")
+//    implementation fg.deobf("dev.architectury:architectury-forge:11.0.5")
+
     implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
     implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
     implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
@@ -184,30 +202,14 @@ dependencies {
 	compileOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge-api:${jei_version}"))
 	// at runtime, use the full JEI jar for Forge
 	runtimeOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge:${jei_version}"))
-    //runtimeOnly fg.deobf("curse.maven:immersive-engineering-231951:3964014")
 
-    //implementation fg.deobf("curse.maven:create-328085:4341479")
-    //implementation fg.deobf("curse.maven:flywheel-486392:4341471")
-	//implementation fg.deobf("curse.maven:immersive-engineering-231951:3579169")
-    //implementation fg.deobf("curse.maven:cc-tweaked-282001:4740605")
-	//implementation fg.deobf("curse.maven:applied-energistics-2-223794:4013348")
-    implementation fg.deobf("curse.maven:ccawires-439890:5099752")
+//    implementation fg.deobf("curse.maven:createaddition-439890:5099752")
     implementation fg.deobf("curse.maven:jade-324717:5390389")
 
-    //runtimeOnly fg.deobf("curse.maven:just-enough-effect-descriptions-jeed-532286:4599236")
-	//runtimeOnly fg.deobf("curse.maven:immersive-engineering-231951:3963698")
-
 	//runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4202944")
-	//runtimeOnly fg.deobf("curse.maven:thermal-foundation-222880:4112137")
-	//runtimeOnly fg.deobf("curse.maven:thermal-expansion-69163:4112130")
-	//runtimeOnly fg.deobf("curse.maven:immersive-petroleum-268250:4314934")
 
-	//runtimeOnly fg.deobf("curse.maven:tinkers-construct-74072:3389377")
 	//runtimeOnly fg.deobf("curse.maven:mantle-74924:3412365")
 
-	//runtimeOnly fg.deobf("curse.maven:simply-jetpacks-2-251792:3203659")
-
-	//annotationProcessor "org.spongepowered:mixin:${mixin_version}:processor"
 	annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 }
 
