--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -67,13 +67,13 @@ for greater distance power transport and more energy to fit in with the gregtori
     versionRange="[15.0.0.0,)"
     ordering="NONE"
     side="BOTH"
-[[dependencies.ccawires]]
-    modId="ccawires"
-    mandatory=true
-    #versionRange="${minecraft_version_range}-1.2.3"
-    versionRange="1.20.1-1.2.3"
-    ordering="BEFORE"
-    side="BOTH"
+#[[dependencies.ccawires]]
+#    modId="createaddition"
+#    mandatory=true
+#    #versionRange="${minecraft_version_range}-1.2.3"
+#    versionRange="1.20.1-1.2.3"
+#    ordering="BEFORE"
+#    side="BOTH"
 [[dependencies.ccawires]]
     modId="minecraft"
     mandatory=true
