--- a/build.gradle
+++ b/build.gradle
@@ -8,14 +8,6 @@ buildscript {
             url = 'https://maven.parchmentmc.org'
         }
         maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
-        maven { url = 'https://maven.architectury.dev/' }
-        maven {
-            // saps.dev Maven (KubeJS and Rhino)
-            url = "https://maven.saps.dev/releases"
-            content {
-                includeGroup "dev.latvian.mods"
-            }
-        }
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: "${forgegradle_version}", changing: true
@@ -26,7 +18,7 @@ buildscript {
 // Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
 apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'org.parchmentmc.librarian.forgegradle'
-apply plugin: 'eclipse'
+apply plugin: 'idea'
 apply plugin: 'maven-publish'
 apply plugin: 'org.spongepowered.mixin'
 
@@ -173,6 +165,14 @@ repositories {
             includeGroup "curse.maven"
         }
     }
+    maven { url = 'https://maven.architectury.dev/' }
+    maven {
+        // saps.dev Maven (KubeJS and Rhino)
+        url = "https://maven.saps.dev/releases"
+        content {
+            includeGroup "dev.latvian.mods"
+        }
+    }
 
     //maven { url = 'https://maven.parchmentmc.org' }
     //maven { url = 'https://repo.spongepowered.org/repository/maven-public' }
@@ -183,13 +183,10 @@ dependencies {
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
-
-    // ForgeGradle
-//    implementation fg.deobf("dev.latvian.mods:kubejs-forge:${kubejs_version}")
-
-    // these two are unfortunately needed since fg.deobf doesn't respect transitive dependencies yet
-//    implementation fg.deobf("dev.latvian.mods:rhino-forge:${rhino_version}")
-//    implementation fg.deobf("dev.architectury:architectury-forge:11.0.5")
+//
+    implementation fg.deobf("dev.latvian.mods:kubejs-forge:${kubejs_version}")
+    implementation fg.deobf("dev.latvian.mods:rhino-forge:${rhino_version}")
+    implementation fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
 
     implementation fg.deobf("com.simibubi.create:create-${create_minecraft_version}:${create_version}:slim") { transitive = false }
     implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${flywheel_minecraft_version}:${flywheel_version}")
