removed whatever I did with kjs, going to try making a builder for connectors first

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,9 @@ minecraft {
         client {
             workingDirectory project.file('run')
 
+            property 'mixin.env.remapRefMap', 'true'
+            property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
+            
             //arg '-mixin.config=ccawires.mixins.json'
 
             // Recommended logging data for a userdev environment
