--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,8 @@ minecraft {
     // Simply re-run your setup task after changing the mappings to update your workspace.
     mappings channel: 'parchment', version: "${parchment_version}-${minecraft_version}"
 
-    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg') // Currently, this location cannot be changed from the default.
+    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
+    // Currently, this location cannot be changed from the default.
 
     // Default run configurations.
     // These can be tweaked, removed, or duplicated as needed.
@@ -66,7 +67,7 @@ minecraft {
 
             property 'mixin.env.remapRefMap', 'true'
             property 'mixin.env.refMapRemappingFile', "${projectDir}/build/createSrgToMcp/output.srg"
-            
+
             //arg '-mixin.config=createpowerlines.mixins.json'
 
             // Recommended logging data for a userdev environment
@@ -151,11 +152,14 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    maven {
-        // Location of the maven for mixed mappings, Registrate, and Flywheel
-        name 'tterrag maven'
-        url 'https://maven.tterrag.com'
-    }
+    maven { url = "https://api.modrinth.com/maven" }
+    maven { url = "https://maven.firstdarkdev.xyz/snapshots" }
+    maven { url = "https://maven.terraformersmc.com/releases/" }
+    maven { url = "https://maven.saps.dev/minecraft"; content { includeGroup "dev.latvian.mods" } }
+    maven { url = "https://jitpack.io" }
+    maven { url = "https://modmaven.dev" }
+    maven { url = "https://maven.architectury.dev" }
+    maven { url = "https://maven.tterrag.com" }
     maven {
         // location of the maven that hosts JEI files since January 2023
         // location of the maven for Vazkii's mods
@@ -170,10 +174,10 @@ repositories {
     }
     maven { url = 'https://maven.architectury.dev/' }
     maven {
-        // saps.dev Maven (KubeJS and Rhino)
-        url = "https://maven.saps.dev/releases"
+        name = 'GTCEu Maven'
+        url = 'https://maven.gtceu.com'
         content {
-            includeGroup "dev.latvian.mods"
+            includeGroup 'com.gregtechceu.gtceu'
         }
     }
 
@@ -197,20 +201,27 @@ dependencies {
 
     /* other minecraft dependencies are here */
 
-	// compile against the JEI API but do not include it at runtime
-	compileOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}"))
-	compileOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge-api:${jei_version}"))
-	// at runtime, use the full JEI jar for Forge
-	runtimeOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge:${jei_version}"))
+    // compile against the JEI API but do not include it at runtime
+    compileOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-common-api:${jei_version}"))
+    compileOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge-api:${jei_version}"))
+    // at runtime, use the full JEI jar for Forge
+    runtimeOnly(fg.deobf("mezz.jei:jei-${jei_minecraft_version}-forge:${jei_version}"))
+
 
 //    implementation fg.deobf("curse.maven:createaddition-439890:5099752")
     implementation fg.deobf("curse.maven:jade-324717:5390389")
 
-	//runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4202944")
+    // gregtech deps
+    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:1.0.28.d")
+    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:1.4.4:slim")
+    implementation fg.deobf("dev.toma.configuration:configuration-forge-1.20.1:2.2.0")
 
-	//runtimeOnly fg.deobf("curse.maven:mantle-74924:3412365")
 
-	annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
+    //runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4202944")
+
+    //runtimeOnly fg.deobf("curse.maven:mantle-74924:3412365")
+
+    annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 }
 
 mixin {
