--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,9 @@ create_version = 0.5.1.e-22
 flywheel_version = 0.6.10-7
 registrate_version = MC1.20-1.3.3
 
+gtceu_version=1.4.4
+ldlib_version=1.0.28.b
+
 forgegradle_version = 6.0.6
 mixingradle_version = 0.7-SNAPSHOT
 mixin_version = 0.8.5
