--- a/gradle.properties
+++ b/gradle.properties
@@ -6,17 +6,14 @@ org.gradle.daemon=false
 minecraft_version = 1.20.1
 forge_version = 47.1.3
 
-jei_minecraft_version = 1.20.1
-jei_version = 15.2.0.22
+jei_version = 15.20.0.105
 
-create_minecraft_version = 1.20.1
-flywheel_minecraft_version = 1.20.1
-create_version = 0.5.1.e-22
-flywheel_version = 0.6.10-7
+create_version = 0.5.1.j-55
+flywheel_version = 0.6.11-13
 registrate_version = MC1.20-1.3.3
 
-gtceu_version=1.4.4
-ldlib_version=1.0.28.d
+gtceu_version=1.5.3
+ldlib_version=1.0.33.a
 
 forgegradle_version = 6.0.6
 mixingradle_version = 0.7-SNAPSHOT
