--- a/build.gradle
+++ b/build.gradle
@@ -208,19 +208,19 @@ dependencies {
     runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
 
 
-//    implementation fg.deobf("curse.maven:createaddition-439890:5099752")
-    implementation fg.deobf("curse.maven:jade-324717:5390389")
+    compileOnly(fg.deobf("curse.maven:createaddition-439890:5099752"))
+    runtimeOnly(fg.deobf("curse.maven:jade-324717:5390389"))
 
     // energy meter mod for testing
-    implementation fg.deobf("curse.maven:energymeter-532169:4813550")
+    runtimeOnly(fg.deobf("curse.maven:energymeter-532169:4813550"))
 
     // gregtech deps
-//    compileOnly(fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}"))
-//    compileOnly(fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim"))
-//    compileOnly(fg.deobf("dev.toma.configuration:configuration-forge-1.20.1:2.2.0"))
-    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}")
-    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim")
-    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:2.2.0")
+    compileOnly(fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}"))
+    compileOnly(fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim"))
+    compileOnly(fg.deobf("dev.toma.configuration:configuration-forge-1.20.1:2.2.0"))
+//    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}")
+//    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim")
+//    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:2.2.0")
 
     //runtimeOnly fg.deobf("curse.maven:cofh-core-69162:4202944")
 
