--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -66,13 +66,12 @@ A fork of C:C&A for improving it's wire connectors and making custom ones for mo
     versionRange="[15.0.0.0,)"
     ordering="NONE"
     side="BOTH"
-#[[dependencies.createpowerlines]]
-#    modId="createaddition"
-#    mandatory=true
-#    #versionRange="${minecraft_version_range}-1.2.3"
-#    versionRange="1.20.1-1.2.3"
-#    ordering="BEFORE"
-#    side="BOTH"
+[[dependencies.createpowerlines]]
+    modId="createaddition"
+    mandatory=false
+    versionRange="[1.20.1-1.2.3,1.20.1-1.3)"
+    ordering="NONE"
+    side="BOTH"
 [[dependencies.createpowerlines]]
     modId="minecraft"
     mandatory=true
