--- a/build.gradle
+++ b/build.gradle
@@ -208,11 +208,11 @@ dependencies {
     runtimeOnly(fg.deobf("mezz.jei:jei-${minecraft_version}-forge:${jei_version}"))
 
 
-    compileOnly(fg.deobf("curse.maven:createaddition-439890:5099752"))
-    runtimeOnly(fg.deobf("curse.maven:jade-324717:5390389"))
+    implementation fg.deobf("curse.maven:createaddition-439890:5099752")
+    implementation fg.deobf("curse.maven:jade-324717:5390389")
 
     // energy meter mod for testing
-    runtimeOnly(fg.deobf("curse.maven:energymeter-532169:4813550"))
+    implementation fg.deobf("curse.maven:energymeter-532169:4813550")
 
     // gregtech deps
     compileOnly(fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}"))
