--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -51,7 +51,7 @@ A fork of C:C&A for improving it's wire connectors and making custom ones for mo
 [[dependencies.createpowerlines]]
     modId="create"
     mandatory=true
-    versionRange="[0.5.1.e,0.5.2)"
+    versionRange="[0.5.1.j,0.5.2)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.createpowerlines]]
@@ -68,8 +68,8 @@ A fork of C:C&A for improving it's wire connectors and making custom ones for mo
     side="BOTH"
 [[dependencies.createpowerlines]]
     modId="createaddition"
-    mandatory=false
-    versionRange="[1.20.1-1.2.3,1.20.1-1.3)"
+    mandatory=true
+    versionRange="[1.20.1-1.2.3,)"
     ordering="NONE"
     side="BOTH"
 [[dependencies.createpowerlines]]
