Updated gt to 1.5.4 Updated ldlib

--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,8 @@ create_version = 0.5.1.j-55
 flywheel_version = 0.6.11-13
 registrate_version = MC1.20-1.3.3
 
-gtceu_version=1.5.3
-ldlib_version=1.0.33.a
+gtceu_version=1.5.4
+ldlib_version=1.0.33.b
 
 forgegradle_version = 6.0.6
 mixingradle_version = 0.7-SNAPSHOT
