--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -68,8 +68,14 @@ A fork of C:C&A for improving it's wire connectors and making custom ones for mo
     side="BOTH"
 [[dependencies.createpowerlines]]
     modId="createaddition"
-    mandatory=true
+    mandatory=false
     versionRange="[1.20.1-1.2.3,)"
+    ordering="NONE"
+    side="BOTH"
+[[dependencies.createpowerlines]]
+    modId="gtceu"
+    mandatory=false
+    versionRange="1.5.4"
     ordering="NONE"
     side="BOTH"
 [[dependencies.createpowerlines]]
