--- a/build.gradle
+++ b/build.gradle
@@ -160,6 +160,7 @@ repositories {
     maven { url = "https://modmaven.dev" }
     maven { url = "https://maven.architectury.dev" }
     maven { url = "https://maven.tterrag.com" }
+    maven { url = "https://thedarkcolour.github.io/KotlinForForge/" }
     maven {
         // location of the maven that hosts JEI files since January 2023
         // location of the maven for Vazkii's mods
