--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ mixin {
     add sourceSets.main, "createpowerlines.refmap.json"
     config "createpowerlines.mixins.json"
 
+    debug.verbose = true
     debug.export = true
 }
 
@@ -161,6 +162,8 @@ repositories {
     maven { url = "https://maven.architectury.dev" }
     maven { url = "https://maven.tterrag.com" }
     maven { url = "https://thedarkcolour.github.io/KotlinForForge/" }
+    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
+    maven { url = "https://raw.githubusercontent.com/Fuzss/modresources/main/maven/" } // ForgeConfigAPIPort
     maven {
         // location of the maven that hosts JEI files since January 2023
         // location of the maven for Vazkii's mods
@@ -193,9 +196,13 @@ dependencies {
     implementation fg.deobf("dev.latvian.mods:rhino-forge:${rhino_version}")
     implementation fg.deobf("dev.architectury:architectury-forge:${architectury_version}")
 
-    implementation fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
-    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}")
-    implementation fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}")
+    implementation(fg.deobf("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false })
+    implementation(fg.deobf("net.createmod.ponder:Ponder-Forge-${minecraft_version}:${ponder_version}"))
+    compileOnly(fg.deobf("dev.engine-room.flywheel:flywheel-forge-api-${minecraft_version}:${flywheel_version}"))
+    runtimeOnly(fg.deobf("dev.engine-room.flywheel:flywheel-forge-${minecraft_version}:${flywheel_version}"))
+    implementation(fg.deobf("com.tterrag.registrate:Registrate:${registrate_version}"))
+    compileOnly(annotationProcessor("io.github.llamalad7:mixinextras-common:0.4.1"))
+    implementation("io.github.llamalad7:mixinextras-forge:0.4.1")
 
     /* other minecraft dependencies are here */
 
@@ -211,29 +218,22 @@ dependencies {
 
     // testing mods
     implementation fg.deobf("curse.maven:energymeter-532169:4813550")
-//    runtimeOnly(fg.deobf("curse.maven:immersive-engineering-231951:5224387"))
+    runtimeOnly(fg.deobf("curse.maven:immersive-engineering-231951:5224387"))
 
-//    runtimeOnly(fg.deobf("curse.maven:cofh-core-69162:5374122"))
-//    runtimeOnly(fg.deobf("curse.maven:thermal-expansion-69163:5372749"))
-//    runtimeOnly(fg.deobf("curse.maven:thermal-foundation-222880:5443583"))
+    runtimeOnly(fg.deobf("curse.maven:cofh-core-69162:5374122"))
+    runtimeOnly(fg.deobf("curse.maven:thermal-expansion-69163:5372749"))
+    runtimeOnly(fg.deobf("curse.maven:thermal-foundation-222880:5443583"))
 
     // gregtech deps
-//    compileOnly(fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}"))
-//    compileOnly(fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim"))
-//    compileOnly(fg.deobf("dev.toma.configuration:configuration-forge-1.20.1:2.2.0"))
-    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-${minecraft_version}:${ldlib_version}")
-    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim")
-    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:2.2.0")
+    compileOnly(fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}"))
+    compileOnly(fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim"))
+    compileOnly(fg.deobf("dev.toma.configuration:configuration-forge-1.20.1:2.2.0"))
+
+//    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-${minecraft_version}:${ldlib_version}")
+//    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim")
+//    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:2.2.0")
 
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
-}
-
-mixin {
-    // add sourceSets.main, 'createpowerlines.refmap.json'
-    config 'createpowerlines.mixins.json'
-
-    debug.verbose = true
-    debug.export = true
 }
 
 // Example for how to get properties into the manifest for reading at runtime.
