--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,9 @@ forge_version = 47.3.6
 
 jei_version = 15.20.0.105
 
-create_version = 0.5.1.j-55
-flywheel_version = 0.6.11-13
+create_version = 6.0.1-20
+ponder_version = 1.0.36
+flywheel_version = 1.0.1
 registrate_version = MC1.20-1.3.3
 
 gtceu_version=1.6.2
