--- a/build.gradle
+++ b/build.gradle
@@ -240,13 +240,13 @@ dependencies {
     runtimeOnly(fg.deobf("curse.maven:thermal-foundation-222880:5443583"))
 
     // gregtech deps
-    compileOnly(fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}"))
-    compileOnly(fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim"))
-    compileOnly(fg.deobf("dev.toma.configuration:configuration-forge-1.20.1:2.2.0"))
+//    compileOnly(fg.deobf("com.lowdragmc.ldlib:ldlib-forge-1.20.1:${ldlib_version}"))
+//    compileOnly(fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim"))
+//    compileOnly(fg.deobf("dev.toma.configuration:configuration-forge-1.20.1:2.2.0"))
 
-//    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-${minecraft_version}:${ldlib_version}")
-//    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim")
-//    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:2.2.0")
+    implementation fg.deobf("com.lowdragmc.ldlib:ldlib-forge-${minecraft_version}:${ldlib_version}")
+    implementation fg.deobf("com.gregtechceu.gtceu:gtceu-${minecraft_version}:${gtceu_version}:slim")
+    implementation fg.deobf("dev.toma.configuration:configuration-forge-${minecraft_version}:2.2.0")
 
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 }
