--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,5 +10,7 @@ jobs:
       uses: actions/checkout@v4
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
     - name: Build with Gradle
       run: ./gradlew build
