--- a/build.gradle
+++ b/build.gradle
@@ -171,8 +171,20 @@ repositories {
     maven { url = "https://api.modrinth.com/maven" }
     maven { url = "https://maven.firstdarkdev.xyz/snapshots" }
     maven { url = "https://maven.terraformersmc.com/releases/" }
-    maven { url = "https://maven.saps.dev/minecraft"; content { includeGroup "dev.latvian.mods" } }
-    maven { url = "https://jitpack.io" }
+    maven {
+        url "https://maven.latvian.dev/releases"
+        content {
+            includeGroup "dev.latvian.mods"
+            includeGroup "dev.latvian.apps"
+        }
+    }
+
+    maven {
+        url 'https://jitpack.io'
+        content {
+            includeGroup "com.github.rtyley"
+        }
+    }
     maven { url = "https://modmaven.dev" }
     maven { url = "https://maven.architectury.dev" }
     maven { url = "https://maven.tterrag.com" }
