--- a/gradle.properties
+++ b/gradle.properties
@@ -6,15 +6,15 @@ org.gradle.daemon=false
 minecraft_version = 1.20.1
 forge_version = 47.3.6
 
-jei_version = 15.20.0.105
+jei_version = 15.20.0.106
 
-create_version = 6.0.1-20
-ponder_version = 1.0.36
-flywheel_version = 1.0.1
+create_version = 6.0.6-150
+ponder_version = 1.0.80
+flywheel_version = 1.0.4
 registrate_version = MC1.20-1.3.3
 
-gtceu_version=1.6.4
-ldlib_version=1.0.33.b
+gtceu_version=1.7.0-SNAPSHOT
+ldlib_version=1.0.39
 
 forgegradle_version = 6.0.6
 mixingradle_version = 0.7-SNAPSHOT
